2015-10-18 Roman
- FIX:SYS: Config-file loading and user API function load() some rewrote for prevent access behind allocated memory.
- FIX:Special.FLibSYS: Function FFT() some fixed and improved to adaptive substitution <vlOnEVAL> by it same EVAL
    and insert previous valid values.
- FIX:UI.QTCfg: Early host's thread closing added at the window close for prevent crashes at OpenSCADA::QTStarter exit.
- UI.QTStarter: Daemon mode checking to argument "daemon" expanded. Source code some cleaned.


2015-10-15 Roman
- debian/control: Some commented dependents are added.
- SYS: User API object Array expanded by function sum() for the array's pointed items sum allow.
- FIX:UI.QTCfg: Checking to octal, for single zero, expanded.
- FIX:UI.Vision: Wrong removed of procedure's language processing fix.


2015-10-13 Roman
- DATA.ICONS: Appended by icons busy.png, connected.png, connecting.png.
- SYS: Translation to Russian some fixed.
- SYS.TUI: Attribute run_st is renamed to runSt.
- !!!!:UI.QTCfg: Requests to hosts processing moved to different threads and the interface made responsible at whole.


2015-10-08 Roman
- DB.LibsDB.OscadaLibs.db: User protocol implementation "OPTRIS CT/CTL" is added.
- SYS.XMLNode: To encoding on save function added symbol 0 processing to '\000' before the binary data encoding by system.
    Mostly for now to resolve problems into UI.WebCfgD.
- DAQ.ICP_DAS: ARM part updated to current and to build for ISA boards and I-8014.
- UI.{VCAEngine,Vision}: Service "activate" for visualizer specific attributes moved to "/serv/attr/{AttrId}".


2015-10-05 Roman
- UI.QTCfg: Checking for no apply editable widgets rewrote to direct checking.


2015-09-30 Roman
- DB.LibsDB.vcaBase.db: Mostly adapted for real permissions for users into new groups "op", "ITW".
- DB.Model.{AGLKS,Boiler}.St.db: Some generic properties moved from DB to the configuration file, like:
	External Hosts, Generic input transports, Security users and groups.